/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";
package io.bisq.protobuffer;

option java_package = "bisq.grpc.protobuf";
option java_multiple_files = true;

service GetVersion {
    rpc GetVersion (GetVersionRequest) returns (GetVersionReply) {
    }
}

service GetBalance {
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceReply) {
    }
}
service StopServer {
    rpc StopServer (StopServerRequest) returns (StopServerReply) {
    }
}

message GetVersionRequest {
}

message GetVersionReply {
    string version = 1;
}

message GetBalanceRequest {
}

message GetBalanceReply {
    uint64 balance = 1;
}

message StopServerRequest {
}

message StopServerReply {
}
